--- a/static/style.css
+++ b/static/style.css
@@ -1,47 +1,78 @@
 body {
-			background: lightgray;
-			font-family: 'Roboto', sans-serif;
-		}
+	background: lightgray;
+	font-family: 'Roboto', sans-serif;
+}
 
-		h3 {
-			font-size: 40px;
-	    	margin-top: 0px;
-		}
+h3 {
+	font-size: 40px;
+	margin-top: 0px;
+}
 
-		#map {
-		  height: 500px;
-		}
+#map {
+	height: 500px;
+}
 
-		.box {
-		  background-color: #c9d9da;
-		  -webkit-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
-		  -moz-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
-		  box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
-		  border: 2px solid gray;
-		  display: inline-block;
-		  padding: 50px;
-    	  margin: 50px;
-		}
+.box {
+	background-color: #c9d9da;
+	-webkit-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
+	border: 2px solid gray;
+	display: inline-block;
+	padding: 50px;
+    margin: 50px;
+}
 
-		.menu-main {
-			width: 700px;
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;			
-		}
-		.menu-main > span {
-			display: flex;
-		}
-		.menu-main > span > input:hover {
-			cursor: pointer;
-		}
+.hidden {
+	display: none;
+}
 
-		.menu-helper > input:hover {
-			cursor: pointer;
-		}
+.menu-main {
+	width: 700px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;			
+}
+.menu-main > span {
+	display: flex;
+}
+.menu-main > span > input:hover {
+	cursor: pointer;
+}
 
-		.menu-main > span > input,
-		.menu-helper > input {
-			font-size: 30px;
-			border: 5px solid black;
-		}
+.menu-helper > input:hover {
+	cursor: pointer;
+}
+
+.menu-main > span > input,
+.menu-helper > input {
+	font-size: 30px;
+	border: 5px solid black;
+}
+
+.logo {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	width: 100px;
+	height: 100px;
+	border-radius: 100px;
+	transition: 0.6s;
+}
+
+.logo:hover {
+	width: 160px;
+	height: 160px;
+	transition: 0.6s;
+}
+
+.main-hum-hum {
+	border: none;
+	height: 2px;
+	background-color: black;
+}
+
+.welcome-message {
+	text-align: center;
+	font-family: sans-serif;
+}
