--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -35,4 +35,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.helper {
+  color: green;
+}
+
+.needer {
+  color: purple;
+}
+
+h3 {
+  color: gray;
+  padding: 0;
+  margin: 0;
 }
