--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #768298;
+  color: white;
 }
 
 .App-logo {
@@ -13,15 +15,18 @@
   }
 }
 
-.App-header {
+.App-content {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-content > div {
+  width: 80%;
 }
 
 .App-link {
@@ -53,6 +58,5 @@ h3 {
 
 .button-holder {
   display: flex;
-  width: 60%;
   justify-content: space-between;
 }
