--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,8 @@
 }
 
 h3 {
+  display: none;
+  font-size: 12px;
   color: gray;
   padding: 0;
   margin: 0;
@@ -76,4 +78,8 @@ h3 {
 
 .who {
   padding-top: 10px;
+}
+
+a {
+  color: white;
 }
