--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+a {
+  color: white;
+  text-decoration: none;
+}
+
+h3 {
+  display: none;
+  font-size: 12px;
+  color: gray;
+  padding: 0;
+  margin: 0;
+}
+
 .App {
   text-align: center;
   background-color: #768298;
@@ -7,6 +20,7 @@
 .larger {
   font-size: 30px;
   font-weight: 400;
+  text-decoration: none;
 }
 
 .credit-text-hum {
@@ -67,14 +81,6 @@
   color: purple;
 }
 
-h3 {
-  display: none;
-  font-size: 12px;
-  color: gray;
-  padding: 0;
-  margin: 0;
-}
-
 .button-holder {
   padding: 5px; 
   display: flex;
@@ -83,8 +89,4 @@ h3 {
 
 .who {
   padding-top: 10px;
-}
-
-a {
-  color: white;
 }
