--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,16 @@ h3 {
   margin: 0;
 }
 
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
 .smol {
-  width: 200px;
+  margin-left: 400px;
+  width: 300px;
+  list-style-position: outside;
 }
 
 .App {
@@ -28,6 +36,8 @@ h3 {
 }
 
 .credit-text-hum {
+  font-size: 22px;
+  color: gray;
   padding-top: 200px;
   padding-left: 200px;
 }
@@ -46,7 +56,6 @@ h3 {
   padding: 20px;
   height: 12vmin;
   width: 12vmin;
-  pointer-events: none;
   border-radius: 100px;
 }
 
