--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ ul {
   align-items: start;
 }
 
+hr {
+  margin: 40px;
+}
+
 .smol {
   margin-left: 400px;
   width: 300px;
@@ -115,4 +119,29 @@ ul {
 
 .who {
   padding-top: 10px;
+}
+
+.message {
+  border: 3px solid white;
+  background-color: #083e3e;
+  -webkit-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 35px;
+}
+
+.date {
+  font-size: 13px;
+  color: #8e8e8e;
+  text-align: left;
+  margin: 30px;
+}
+
+.text {
+  font-size: 70px;
+  text-align: left;
+  margin: 0px 30px 31px 38px;
 }
