--- a/public/App.css
+++ b/public/App.css
@@ -137,7 +137,7 @@ hr {
 
 .message {
   border: 3px solid white;
-  background-color: #055214;
+  background-color: blue;
   -webkit-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
