some changes in the design

--- a/public/App.css
+++ b/public/App.css
@@ -1,197 +1,44 @@
-body {
-  font-family: 'Roboto', sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
-a {
-  color: white;
-  text-decoration: none;
-}
-
-h3 {
-  display: none;
-  font-size: 12px;
-  color: gray;
-  padding: 0;
-  margin: 0;
-}
-
-h4 {
-  font-size: 20px;
-  color: cadetblue;
-}
-
-ul {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-
-hr {
-  margin: 40px;
-}
-
-.msg {
-  color: #fb00ff;
-}
-
-.smol {
-  margin-left: 400px;
-  width: 300px;
-  list-style-position: outside;
-}
-
-.links {
-  margin-top: 300px;
-}
-
-.links > p {
-  font-size: 20px;
-  color: #656565;
-}
-
-.links > p > a {
-  color: #df60ff;
-  text-decoration: underline;
-}
-
-.App {
-  text-align: center;
-  background-color: #768298;
-  color: white;
-}
-
-.larger {
-  font-size: 30px;
-  font-weight: 400;
-  text-decoration: none;
-}
-
-.credit-text-hum {
-  font-size: 22px;
-  color: gray;
-  padding-left: 300px;
-}
-
-.credit-text-hum-hum {
-  padding-top: 100px;
-}
-
-.credits-section {
-  font-size:25px;
-  display: flex;
-  justify-content: flex-start;
+body,html {
+  background-color: white;
+  color: black;
+  font-family: 'Righteous', cursive;
 }
 
 .App-logo {
-  padding: 20px;
-  height: 12vmin;
-  width: 12vmin;
+  transition: 1s;
   border-radius: 100px;
+  width: 140px;
+  height: 140px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-content {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App-logo:hover {
+  transition: 1s;
+  width: 175px;
+  height: 175px;
 }
 
-.App-content > div {
-  width: 80%;
+.headerCenter {
+  font-family: 'Pacifico', cursive;
 }
 
-.App-link {
-  color: #61dafb;
+.buttonMargin {
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rainbowLine {
+  border: none;
+  background: linear-gradient(90deg, red, blue);
+  height: 2px;
+  width: 70%;
 }
 
-.helper {
-  color: green;
-}
-
-.needer {
-  color: purple;
-}
-
-.button-holder {
-  padding: 5px; 
-  display: flex;
-  justify-content: space-around;
-}
-
-.who {
-  padding-top: 40px;
-  font-size: 60px;
-}
-
-.message {
-  border: 3px solid white;
-  background-color: blue;
-  -webkit-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 34px -10px rgba(0,0,0,0.75);
-  border-radius: 30px;
-  display: flex;
-  flex-direction: column-reverse;
-  margin: 35px;
-}
-
-.date {
-  font-size: 13px;
-  color: #8e8e8e;
-  text-align: left;
-  margin: 30px;
-}
-
-.text {
-  font-size: 70px;
-  text-align: left;
-  margin: 0px 30px 31px 38px;
-}
-
-.input-large {
-  margin: 30px;
-}
-
-.input-large > label {
-  font-size: 38px;
-  margin: 30px;
-}
-
-.input-large > div > input {
-  font-size: 70px;
-  background-color: #3b414e3b;
-  color: white;
-  padding: 14px;
-}
-
-.contact-info {
-  display: flex;
-  flex-direction: row;
-  text-align: left;
-}
-
-.contact-info > div > p {
-  padding: 0px;
-  margin-left: 40px;
-}
-
-.contact-inputs {
-  display: flex;
-  flex-direction: column;
-}
-
-.SendMessage {
-  font-size: 20px;
+/* Last paragraph of the code */
+body {
+  text-align: center;
 }
